Delete unnecessary functionality from the BetterRally tool to bring plugin back to a baseline.

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "manifest_version":2,
     "description":"A better way to use Rally.",
     "background":{
-        "scripts":["js/background.js"]
+        "scripts":[]
     },
     "options_page": "html/options.html",
     "permissions":[
