Switched emails back to @gmail, since @rallydev uses custom filtering preventing build notices from delivering.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_install:
 
 notifications:
   email:
-    - skendall@rallydev.com
-    - elifka@rallydev.com
+    - stefankendall@gmail.com
+    - eric.lifka@gmail.com
